# project-chatter

./: .gitignore  Cargo.toml  README.md  TODO.md  description.md
client/: Cargo.toml  run_client.sh
client/src/: common.rs  main.rs
common/: Cargo.toml  common.rs
common/src/: common.rs
server/: Cargo.toml
server/src/: common.rs  handler.rs  main.rs  router.rs  utils.rs  ws.rs
src/: main.rs
src/client/: client.rs
src/common/: mod.rs
src/server/: handler.rs  logging.rs  router.rs  server.rs  utils.rs  ws.rs
