[package]
name = "chatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
#rocket = { version = "0.5.0-rc.1", features = ["json"] }
futures = "0.3.0"
async-std = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.0"

[dev-dependencies]
rand = "0.8"