[package]
name = "client"
authors = ["Kacper Kramarz-Fernandez, Jan Zembowicz"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
#rocket = { version = "0.5.0-rc.1", features = ["json"] }
futures = "0.3.0"
async-std = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17.1"
tokio-stream = "0.1.5"
tungstenite = "0.17.2"
chrono = "0.4.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
signal-hook = "0.3.14"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"              # Serialization
]


[dev-dependencies]
rand = "0.8"
