[package]
name = "common"
authors = ["Kacper Kramarz-Fernandez, Jan Zembowicz"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/common.rs"

[dependencies]
serde = {version = "1.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version= "1", features = ["full"] }
warp = "0.3"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"              # Serialization
]