[package]
name = "server"
version = "0.1.0"
authors = ["-"]
edition = "2021"

[dependencies]
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
hyper = "0.14"
tokio = { version= "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
route-recognizer = "0.2"
bytes = "0.5"
async-trait = "0.1"
chrono = "0.4.0"

warp = "0.3"
tokio-stream = "0.1.6"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
