[package]
name = "server"
authors = ["Kacper Kramarz-Fernandez, Jan Zembowicz"]
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
hyper = "0.14"
tokio = { version= "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
route-recognizer = "0.2"
bytes = "0.5"
async-trait = "0.1"
chrono = "0.4.0"
warp = "0.3"
tokio-stream = "0.1.6"
dirs = "4.0.0"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"              # Serialization
]

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
